# pgland_segmentation

./: README.md  data_config.csv  data_config_crop.csv  evaluate_model.py  options.py  pyproject.toml  requirements.txt  segment.sh  segment__config_optimizer.sh  segment__sanity_check.sh  segment__sanity_check.sh~  segment__sanity_check_pl.sh  segment__sanity_check_pl.sh~  segment_hyperparameter_testing.sh  train.py  train_cropdata.py  train_cropdata_pl.py
configs/: config.yaml  cropped_dataset_list.yaml
configs/archive/: dataset_config.yml  dataset_list.csv  model_config.yml  optimizer_config.yml
configs/data/: data_config_all.csv  data_config_pd.csv  data_config_qt1.csv  data_config_t1.csv  data_config_t1pd.csv  data_config_t1pdqt1.csv  data_config_t1qt1.csv  (+6 more)
data_utils/: augmentation_parameters.txt  pituitarypineal.py  pituitarypineal_crop.py  transforms.py
dataset/: augmentation_parameters.txt  data_config.csv  make_data_config.sh  make_data_crop_config.sh  pituitarypineal.py  pituitarypineal_crop.py  transforms.py  transforms_outputparams.py
hyperparameter_configs/: hyperparameter_options_1.txt
model/: loss_functions.py  loss_functions.py~  losses.py  losses.py~  segment.py  segment.py~  unet.py  unet.py~
models/: loss_functions.py  metrics.py  model.py  segment.py  segment_pl.py
tests/: test_augmentations.py  test_dataset.py
utils/: [deprecated] data_utils.py  create_data_list.py  data_preprocessing.py  data_utils.py  data_utils_crop.py  dataset.py  losses.py  metrics.py  model_utils.py  preprocessing.py  transform_utils.py  transforms.py
(+70 files in other folders)
