[tool.poetry]
name = "sample-pytorch_project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sample_pgland"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "*"
scipy = "*"
pyyaml = "*"
# torch = ">=1.12"
surfa = ">=0.5.0"
pandas = "^2.0.3"
jupyterlab = "^4.0.3"
ipykernel = "^6.24.0"
nibabel = "^5.1.0"
# torchsummary = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
